<resources>
    <string name="app_name">Gym Around</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--LOGIN SCREEN-->
    <string name="loginStartBtn">Iniciar</string>
    <string name="loginDontRemeberPassBtn">No recuerdo la contraseña</string>
    <string name="loginDontHaveAcountBtn">No tengo una cuenta</string>

    <string name="returnTxt">Volver</string>

    <!--DONT REMEMBER PASS SCREEN-->
    <string name="restore">Restaurar contraseña</string>
    <string name="dontRemeberBtn">Recuperar</string>

    <!--REGISTER SCREEN-->
    <string name="exampleEmail">ejemplo@gmail.com</string>
    <string name="repitePassword">Repite Contraseña</string>
    <string name="registerTxt">Registro</string>
    <string name="registerBtn">Registrar</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="registerTxtRequirementPass">Minimo 8 caracteres, con mayuscula, 1 minuscula y 1 numero</string>
    <string name="emailAlredyUsed">El correo ya se ha utilizado para una cuenta</string>

    <!--DRAWER ITEMS-->
    <string name="drawerTxtTitleGroupGeneral">General</string>
    <string name="drawerTxtHome">Inicio</string>
    <string name="drawerTxtLocate">Localizar</string>
    <string name="drawerTxtRoutine">Rutinas</string>

    <string name="drawerTxtTitleGroupSettings">Ajustes</string>
    <string name="drawerTxtProfile">Perfil</string>
    <string name="drawerTxtPrefence">Preferencias</string>
    <string name="drawerTxtLogout">Cerrar Sesion</string>

    <!--MAIN MENU SCREEN-->
    <string name="drawerTxtNews">Noticias</string>

    <!--SETTINGS SCREEN-->
    <string name="settingsTxtLanguage">Idioma</string>
    <string name="settingsTxtLanguageListTitle">Elige el idioma</string>
    <string name="settingsTxtLanguageListOpt1">Español</string>
    <string name="settingsTxtLanguageListOpt2">Ingles</string>

    <string name="nickname">Nombre usuario(Nick)</string>
    <string name="ajustesPrefNick">Introduzca el nick por defecto</string>
    <string name="txtPersonal">Personal</string>
    <string name="txtCustomization">Personalizacion</string>

    <string name="txtFont">Fuente</string>
    <string name="ajustesPrefFontList">Lista de fuentes</string>

    <string name="darkMode">Modo oscuro</string>
    <string name="disabled">Desactivado</string>
    <string name="enabled">Activado</string>
    <string name="notifications">Notificaciones</string>

    <!--USER MANAGEMENT SCREEN-->
    <string name="name">Nombre</string>
    <string name="surnames">Apellidos</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="cancel">Cancelar</string>
    <string name="submit">Confirmar</string>
    <string name="users">Usuarios</string>
    <string name="newUser">Nuevo Usuario</string>
    <string name="editUser">Editar Usuario</string>
    <string name="deleteUser">Eliminar Usuario</string>
    <string name="deleteUserQuestion">¿Seguro que desea eliminar el usuario?</string>

    <!--USER SCREEN-->
    <string name="noData">Sin datos</string>
    <string name="couldntOpenDataBase">Se ha producido un error al abrir la base de datos</string>
    <string name="admin">Administrador</string>

    <!--SEARCH SCREEN-->
    <string name="title_activity_fragment_location">Map</string>

    <!--ROUTINES SCREEN-->
    <string name="routineTypeCARDIO">CARDIO</string>
    <string name="routineTypeARMS">BRAZOS</string>
    <string name="routineTypeCHEST">PECHO</string>
    <string name="routineTypeBACK">ESPALDA</string>
    <string name="routineTypeLEGS">PIERNAS</string>
    <string name="routineTypeABS">ABDOMINALES</string>

    <string name="cardio15Minutes">Cardio en 15 minutos</string>
    <string name="cardio20Minutes">Cardio en 20 minutos</string>
    <string name="backWithEquipment">Espalda con equipamiento</string>
    <string name="backWithoutEquipment">Espalda sin equipamiento</string>
    <string name="bicepsTricepsWithEquipment">Biceps y Triceps con equipamiento</string>
    <string name="bicepsTricepsWithoutEquipmen">Biceps y Triceps sin equipamiento</string>
    <string name="tricepsWithEquipment">Triceps con equipamiento</string>
    <string name="tricepsWithoutEquipment">Triceps sin equipamiento</string>
    <string name="bicepsWithEquipment">Biceps con equipamiento</string>
    <string name="shouldersWithEquipment">Hombros con equipamiento</string>
    <string name="shouldersWithoutEquipment">Hombros sin equipamiento</string>
    <string name="chestWithEquipment">Pecho con equipamiento</string>
    <string name="chestWithoutEquipment">Pecho sin equipamiento</string>
    <string name="legsWithEquipment">Piernas con equipamiento</string>
    <string name="legsWithoutEquipment">Piernas sin equipamiento</string>
    <string name="absStarter">Abdominales principiante</string>
    <string name="absAdvanced">Abdominales avanzado</string>
    <string name="highDifficult">Dificultad: Alta</string>

    <!--IMC SCREEN-->
    <string name="calculate">Calcular</string>
    <string name="empty">No puede haber campos vacios</string>
    <string name="normalWeight">Peso normal</string>
    <string name="lowWeight">Peso bajo</string>
    <string name="overWeight1">Sobrepeso grado 1</string>
    <string name="overWeight2">Sobrepeso grado 2</string>
    <string name="obesity1">Obesidad tipo 1</string>
    <string name="obesity2">Obesidad tipo 2</string>
    <string name="obesity3">Obesidad tipo 3</string>
    <string name="obesity4">Obesidad tipo 4</string>
    <string name="weightInKilograms">Peso en KG</string>
    <string name="sizeInCentimeters">Altura en CM</string>

    <!-- PROFILE SCREEN-->
    <string name="nick">Nick</string>
    <string name="rate">Valorar</string>
    <string name="rating1">Siento escuchar eso :(</string>
    <string name="rating2">Aceptamos sugerencias para mejorar!</string>
    <string name="rating3">Suficientemente bueno</string>
    <string name="rating4">Muchas gracias!!</string>
    <string name="rating5">Increible! Eres lo mas!</string>
    <string name="valorateUs">Valoranos</string>

</resources>