<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".bd.UserManagementActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registerTxt"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/userManagementTxtUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userManagementEdtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/userManagementTxtUserSurnames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/surnames"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userManagementEdtUserSurnames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userManagementTxtUserSurnames"
            android:layout_alignParentLeft="true"
            android:ems="10" />

        <TextView
            android:id="@+id/userManagementTxtUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userManagementEdtUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ems="10" />

        <TextView
            android:id="@+id/userManagementTxtUserPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userManagementEdtUserEmail"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userManagementEdtUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/userManagementCheckboxUserAdmin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/admin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/userManagementBtnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/userManagementBtnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>