<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7BAFD4"
    android:orientation="vertical"
    tools:context=".principal.RegisterScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegisterReturn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnTxt"
            android:textSize="15dp"
            app:backgroundTint="#0658AE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/registerTxt"
                    android:textSize="40sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtNameRegister"
                    android:layout_width="850px"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:alpha="1"
                    android:drawableLeft="@drawable/ic_name"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtSurnamesRegister"
                    android:layout_width="850px"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_surnames"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/surnames"
                    android:inputType="textPersonName"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edtMailRegister"
                    android:layout_width="850px"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/exampleEmail"
                    android:inputType="textPersonName"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/txtRegisterRequirementsPass"
                    android:layout_width="650px"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/registerTxtRequirementPass" />

                <EditText
                    android:id="@+id/edtPassRegister2"
                    android:layout_width="850px"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/edtPassRegister"
                    android:layout_width="850px"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/repitePassword"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/registerBtn"
                    app:backgroundTint="#3181d4" />


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>