<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7BAFD4"
    android:orientation="vertical"
    tools:context=".principal.LoginScreen">

    <Button
        android:id="@+id/btnReturnDontRememberPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnTxt"
        android:textSize="15dp"
        app:backgroundTint="#0658AE" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/restore"
            android:textColor="@color/black"
            android:textSize="30dp" />

        <EditText
            android:id="@+id/edtEmailDontRemeberPass"
            android:layout_width="850px"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:hint="example@gmail.com"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnRecoverPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/dontRemeberBtn"
            app:backgroundTint="#3181d4" />

    </LinearLayout>

</LinearLayout>