<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".principal.ProfileScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blueMine">

        <Button
            android:id="@+id/btnReturnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/returnTxt"
            android:textSize="15dp"
            app:backgroundTint="#0658AE" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/blueMine"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImgUser"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/face"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/profileTxtUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dimitar Emilov Tochev"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/txtFont"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/settingsTxtLanguage"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/admin"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profileTxtNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileTxtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="pepe@gmail.com"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileTxtFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Fuente"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileTxtLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Idioma"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/profileTxtAdministrator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="No"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valorateUs"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <RatingBar
            android:id="@+id/profileRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:isIndicator="false"
            android:numStars="5"
            android:stepSize="0.5" />

    </LinearLayout>

</LinearLayout>