<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".principal.IMCScreen">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_white"
        android:padding="30dp">

        <TextView
            android:id="@+id/imcWeight"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/weightInKilograms"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/imcEdtWeight"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/imcSize"
            android:gravity="center"
            android:hint="76kg"
            android:inputType="number"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/imcSize"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@id/imcWeight"
            android:gravity="center"
            android:text="@string/sizeInCentimeters"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/imcEdtSize"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_below="@+id/imcEdtWeight"
            android:layout_toRightOf="@id/imcSize"
            android:gravity="center"
            android:hint="180cm"
            android:inputType="number"
            android:textColor="@color/black" />

    </RelativeLayout>

    <Button
        android:id="@+id/imcBtnCalculate"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        style="@style/FirebaseUI.Button.AccountChooser"
        android:text="@string/calculate" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/imcEdtSize"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:id="@+id/imcTxtImcResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/imcTxtResultInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>